<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">By37</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_person">Person</string>
    <string name="action_search">Search</string>
    <string name="action_back">Back</string>
    <!-- mNB = AIzaSyB8Vr8zM-xcbOaW9a8bgLWkfZc8Hcfwrko -->
    <!-- mHome = AIzaSyBCpbIzDF7bEd09CLdSj2HxVoiuPOu5ifY -->
    <!-- key = AIzaSyBfN45rwG_xyPWwmdBNIbaiyLgF0sy0pVw -->
    <string name="map_api_key">AIzaSyBCpbIzDF7bEd09CLdSj2HxVoiuPOu5ifY</string>
    <!-- Facebook App Id -->
    <string name="app_id">1435759036715618</string>
    <string name="fragment_member_login">Fragement Member Login</string>
    <string name="fragment_search">Fragement Search</string>

    <!-- Title Text -->
    <string name="title_member_login">會員登入</string>
    <string name="title_member_signup">會員註冊</string>
    <string name="title_member">會員中心</string>
    <string name="title_member_edit">編輯會員</string>
    <string name="title_member_service">會員服務</string>
    <string name="title_search">搜尋</string>
    <string name="title_test">測試</string>
    <string name="title_supplieshelp">物資需求</string>
    <string name="title_organization">機構簡介</string>
    <string name="title_near_organization">鄰近機構</string>
    <string name="title_test_get">Test Get</string>
    <string name="title_test_post">Test Post</string>
    <string name="title_test_imageView">ImageView</string>
    <string name="title_emergency">急難救助</string>
    <string name="title_productsell">商品義賣</string>

    <!-- Hint Bar Text -->
    <string name="signup_favorite_org">公益機構偏好設定</string>
    <string name="signup_data_detail">以下為選填資料</string>
    <string name="login_social_login">使用社群帳號登入</string>
    <string name="login_by37_login">b37帳號登入</string>

    <!-- EditText Hint -->
    <string name="hint_post_1">ValueName</string>
    <string name="hint_post_2">Input Value</string>

    <!-- Hint Information -->
    <string name="org_data_empty">目前沒有機構資料</string>
    <string name="exit_app_hint">再按一次退出</string>
    <string name="account_hint">帳號 (Email)</string>
    <string name="password_hint">密碼</string>
    <string name="nick_name_hint">暱稱</string>
    <string name="name_hint">真實姓名</string>
    <string name="position_hint">居住城市</string>
    <string name="support_type_hint">贊助方式：</string>
    <string name="support_my_choose_hint">我所指定的機構或類別</string>
    <string name="support_my_type_hint">我偏好的機構類別(至多三項)：</string>
    <string name="edit_avatar_hint">編輯頭像</string>
    <string name="phone_hint">聯絡電話</string>
    <string name="birthday_hint">生日</string>
    <string name="about_me_hint">關於我</string>
    <string name="agree_rule_hint">同意by37服務條款與隱私政策</string>
    <string name="password_confirm_hint">再次確認密碼</string>
    <string name="password_old_hint">請輸入舊密碼</string>
    <string name="password_new_hint">請輸入新密碼</string>
    <string name="login_social_hint">社群帳號快速登入</string>
    <string name="login_normal_hint">已有帳號</string>
    <string name="login_signup_hint">還沒有帳號?</string>
    <string name="about_private_rule">隱私權政策</string>
    <string name="about_service_rule">服務條款</string>
    <string name="member_modify_pw_hint_1">修改密碼</string>
    <string name="member_modify_pw_hint_2">修改密碼成功</string>
    <string name="member_modify_pw_hint_3">修改密碼失敗，請確認密碼是否正確</string>
    <string name="register_success_hint">註冊成功</string>
    <string name="login_success_hint">登入成功</string>
    <string name="logout_success_hint">登出成功</string>
    <string name="login_fail_hint_1">帳號或密碼錯誤</string>
    <string name="login_fail_hint_2">登入失敗，請重新嘗試</string>
    <string name="no_app_hint_1">您的手機尚未安裝此程式</string>
    <string name="internet_error_hint_1">請連接網路服務</string>
    <string name="view_all"><u>查看全部</u></string>
    <string name="remember_me">記住我</string>
    <string name="forget_password">忘記密碼</string>
    <string name="org_pass">已開通</string>
    <string name="org_all_supplies">查看所有需求</string>
    <string name="supplies_name">需求：</string>
    <string name="supplies_phone">電話：</string>
    <string name="supplies_mail">E-mail：</string>
    <string name="supplies_name_empty">目前沒有需求</string>
    <string name="supplies_desc_empty">目前沒有描述內容</string>
    <string name="supplies_phone_empty">目前沒有電話</string>
    <string name="supplies_mail_empty">目前沒有E-mail</string>
    <string name="string_empty">無</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="trade_history">交易查詢</string>
    <string name="heart_money_history">愛心點數查詢</string>
    <string name="edit_product">編輯商品</string>
    <string name="my_market">我的義賣專頁</string>
    <string name="like_history">按過的讚</string>
    <string name="edit_member_data">修改會員資料</string>
    <string name="edit_favorite_org">公益機構偏好設定</string>
    <string name="edit_position">位置設定</string>
    <string name="photo_source">選取照片來源</string>
    <string name="camera">相機</string>
    <string name="album">相簿</string>
    <string name="org_uri">機構網址：</string>
    <string name="org_email">電子郵件：</string>
    <string name="org_phone">聯絡電話：</string>
    <string name="org_donation_link">捐款連結：</string>
    <string name="notification">提醒</string>
    <string name="check_url">確認連結至</string>
    <string name="check_mail">確認寫信至</string>
    <string name="check_phone">確認撥出</string>
    <string name="symbol_confuse">？</string>
    <string name="symbol_notice">！</string>
    <string name="my_position_submit">確認我的位置</string>
    <string name="my_position_delete">刪除我的位置</string>
    <string name="search">搜尋</string>
    <string name="position_hint_desc">請設定您的位置。\n您可以直接使用系統為您抓取的位置\n或任意選擇地標\n如：\n公車站牌、公園、景點、商店、公司等\n當作預設位置。</string>
    <string name="delete_my_position_setting">是否刪除我的位置：</string>
    <string name="setting_finish">設定完成</string>
    <string name="clean_finish">刪除完成</string>
    <string name="my_setting_position">我設定的位置</string>
    <string name="move_setting_position">可以滑動地圖以重新設定位置</string>
    <string name="search_address_error">搜尋不到此地址，請重新嘗試設定其他位置</string>
    <string name="address_empty">請輸入地址</string>
    <string name="address_short">搜尋地址過短，請重新輸入</string>
    <string name="search_hint">搜尋地址或關鍵字</string>
    <string name="send">送出</string>
    <string name="org_type_choose_max">選擇機構類別超過3個</string>

    <!-- Sliding Menu Item -->
    <string-array name="sliding_menu_item">
        <item>主選單</item>
        <item>首頁</item>
        <item>義賣商品分類</item>
        <item>慈善機構分類</item>
        <item>設定</item>
        <item>加入by37粉絲團</item>
        <item>常見問題(FAQ)</item>
        <item>聯絡建議</item>
        <item>分享APP</item>
        <item>使用條款</item>
    </string-array>

    <!-- Source Array -->
    <string-array name="source_type">
        <item>by37</item>
        <item>facebook</item>
        <item>google</item>
    </string-array>

    <!-- Buttom Menu Title -->
    <string name="sell_product">賣東西做公益</string>
    <string name="news">最新消息</string>

    <!-- Botton -->
    <string name="btn_login_fb">Facebook登入</string>
    <string name="btn_login_google">Google+登入</string>
    <string name="btn_join">還不是會員？歡迎點此加入會員</string>
    <string name="btn_login">登入</string>
    <string name="btn_signup">註冊</string>
    <string name="btn_submit">確認</string>
    <string name="btn_submit_send">確認送出</string>
    <string name="btn_logout">登出</string>
    <string name="btn_album">相簿</string>
    <string name="btn_camera">照相</string>
    <string name="btn_content">內容</string>

    <!-- Right Sliding Menu Item -->
    <string-array name="right_sliding_menu_item">
        <item>[Test Fragment List]</item>
        <item>Server Get</item>
        <item>Server Post</item>
        <item>Emergency</item>
        <item>SuppliesHelp</item>
        <item>ProductSell</item>
        <item>Organization</item>
        <item>Map</item>
    </string-array>

    <!-- GoodTypes Initial -->
    <string name="init_goods_types">顯示全部</string>

    <!-- Emergency -->
    <string name="main_emergency_title">急難救助</string>
    <string name="main_product_sell_title">商品義賣</string>

    <!-- Product Sell -->
    <string name="new_product_title">新增義賣商品</string>
    <string name="product_name">商品名稱</string>
    <string name="product_type">商品類別</string>
    <string name="product_photo">商品圖片</string>
    <string name="product_amout">數量</string>
    <string name="product_love_point">愛心點數</string>
    <string name="product_donate">捐贈對象</string>
    <string name="product_description">商品描述</string>
    <string name="product_transpot">運送方式</string>
    <string name="product_location">商品位置</string>
    <string name="product_keyword">商品關鍵字</string>
    <string name="btn_preview">預覽</string>
    <string name="btn_upload_product">義賣商品上架</string>
    <string name="btn_select_pictrue">選擇照片</string>

    <!-- Organization information Item Name -->
    <string name="org_info_main">設立宗旨</string>
    <string name="org_info_service">服務對象與項目</string>
    <string name="org_info_contact">捐款與聯絡</string>

    <!-- ProgressDialog Message -->
    <string name="msg">訊息</string>
    <string name="loading">資料讀取中，請稍候…</string>
    <string name="searching">搜尋中，請稍候…</string>
    <string name="search_result">搜尋結果</string>

    <!-- Organization Type -->
    <string-array name="org_type">
        <item>婦幼關懷</item>
        <item>身心障礙</item>
        <item>老人服務</item>
        <item>環境動保</item>
        <item>國際救援</item>
        <item>重大災難</item>
        <item>多元服務</item>
    </string-array>

</resources>